message ApplicationIdentifier {
    required string author = 1;
    required string package_name = 2;
    required string version = 3;
    optional bytes public_key = 4; //Public key that can be used to verify signed requests
}